Neue Versteigerung eingestellt

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 	<meta name="twitter:site" content="@nunAmen">
 	<meta name="twitter:creator" content="@nunAmen">
 	<meta name="twitter:title" content="Zwangsversteigerung am 20. November 14:00 Uhr in Jena">
-	<meta name="twitter:description" content="Zwangsversteigerung von R&auml;umungsgut am 20. November 14:00 Uhr in Jena -- Gerichtsvollzieher Neumann - Friedrich-Engelgs-Stra&szlig;e 17; 07749 Jena">
+	<meta name="twitter:description" content="Zwangsversteigerung eines Fahrzeugs am 09. März 11:00 Uhr in Jena -- Gerichtsvollzieher Neumann - Friedrich-Engelgs-Stra&szlig;e 17; 07749 Jena">
 	
 	<meta property='og:type'	content='website' />
-	<meta property='og:title'	content='Zwangsversteigerung am 20. November 14:00 Uhr in Jena' />
+	<meta property='og:title'	content='Zwangsversteigerung am 09. März 11:00 Uhr in Jena' />
 	<meta property='og:url'		content='https://gv-neumann.de/?pk_campaign=SocialLink' />
 	<meta property='og:image'	content='https://gv-neumann.de/siegel.png' />
 	<meta property='og:image'	content='https://gv-neumann.de/wappen.png' />
 	<meta property='og:image'	content='https://gv-neumann.de/signet.png' />
-	<meta property='og:description'	content='Zwangsversteigerung von R&auml;umungsgut am 20. November 14:00 Uhr in Jena -- Gerichtsvollzieher Neumann - Friedrich-Engelgs-Stra&szlig;e 17; 07749 Jena' />
+	<meta property='og:description'	content='Zwangsversteigerung eines Fahrzeugs am 09. März 11:00 Uhr in Jena -- Gerichtsvollzieher Neumann - Friedrich-Engelgs-Stra&szlig;e 17; 07749 Jena' />
 	<meta property='og:locale'	content='de_DE' />
 	<meta property="fb:admins"	content="andreas.neumann.731" />
 	
@@ -86,7 +86,7 @@
 	<meta name='msapplication-task' content='name=Visitenkarte von Gerichtsvollzieher Neumann;action-uri=/;icon-uri=/icon.png'>
 	<meta http-equiv='cleartype' content='on'>
 	
-	<meta name='description' lang="de" content='Zwangsversteigerung von R&auml;umungsgut am 20. November 14:00 Uhr in Jena -- Gerichtsvollzieher Neumann - Friedrich-Engels-Stra&szlig;e - 07749 Jena' />
+	<meta name='description' lang="de" content='eines Fahrzeugs am 09. März 11:00 Uhr in Jena -- Gerichtsvollzieher Neumann - Friedrich-Engels-Stra&szlig;e - 07749 Jena' />
 	<meta name="robots" content="index,follow" />
 	<link rel="canonical" href="https://gv-neumann.de/" />
 	
@@ -197,10 +197,10 @@
         
         <div class="vert-text"><div>
             <h2>Zwangs&shy;versteigerung</h2>
-            <p>von R&auml;umungsgut</p>
-            <p>am Freitag den <strong>20. November</strong> 2015 um <strong>14<sup><u>00</u></sup> Uhr</strong></p>
-            <p>in der Spedition Coriand GmbH<br/>(<a href="http://map4jena.de/?flag=adress&amp;street=Spitzweidenweg&amp;number=28a&amp;name=M%C3%B6bel-+und+G%C3%BCterspedition+Coriand+GmbH">Spitzweidenweg 28a; 07743 Jena</a>)</p>
-	    <p><strong>Versteigerungsobjekte:</strong><br/>Möbel &bull; Haushaltsger&auml;te &bull; zwei Küchen &bull; Eisenbahnanlage TT &bull; Fahrradrahmen und <span class="nobr">-ersatz</span>teile &bull; evtl. ein Fernseher</p>
+            <p>eines Fahrzeuges</p>
+            <p>am Mittwoch den <strong>09. M&auml;rz</strong> 2016 um <strong>11<sup><u>00</u></sup> Uhr</strong></p>
+            <p>in ASG GmbH<br/>(<a href="https://map4jena.de/#!flag=adress&street=Stadtrodaer+Stra%DFe&number=109">Stadtrodaer Stra&szlig;e 109; 07747 Jena</a>)</p>
+	    <p><strong>Versteigerungsobjekt:</strong><br/>Opel Vectra (Baujahr ca. 2000), silber-schwarz</p>
         </div></div>
     </div>
     <!-- /Full Page Image Header Area -->
