--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <h2>Zwangs&shy;versteigerung</h2>
             <p>eines Fahrzeuges</p>
             <p>am Mittwoch den <strong>09. M&auml;rz</strong> 2016 um <strong>11<sup><u>00</u></sup> Uhr</strong></p>
-            <p>in ASG GmbH<br/>(<a href="https://map4jena.de/#!flag=adress&street=Stadtrodaer+Stra%DFe&number=109">Stadtrodaer Stra&szlig;e 109; 07747 Jena</a>)</p>
+            <p>in ASG GmbH<br/>(<a href="https://map4jena.de/#!flag=adress&amp;street=Stadtrodaer+Stra%DFe&amp;number=109">Stadtrodaer Stra&szlig;e 109; 07747 Jena</a>)</p>
 	    <p><strong>Versteigerungsobjekt:</strong><br/>Opel Vectra (Baujahr ca. 2000), silber-schwarz</p>
         </div></div>
     </div>
