Zwangsversteigerung wieder herausgenommen

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ a.white, a.white:visited {
 		"colleague": [
         		"http://www.thueringen.de/th4/olg/gerichte_in_thueringen/landgericht_gera/ags/amtsgericht_jena/gerichtsvollzieher/"
         	]
-	}	
+	}
     </script>
 </head>
 <body>
@@ -373,7 +373,7 @@ a.white, a.white:visited {
 				>Sprechzeiten</a>
 			</div>
 		</div>
-		<div class="vert-text">
+		<!--<div class="vert-text">
 			<div>
 				<h2>Zwangs&shy;versteigerung</h2>
 				<p>von R&auml;umungsgut</p>
@@ -393,7 +393,7 @@ a.white, a.white:visited {
 					Toplader)) im Paket zu versteigern.</p>
 				<p>Mindestgebot 300,00 €</p>
 			</div>
-		</div>
+		</div>-->
 	</div>
 	<!-- /Full Page Image Header Area -->
 	<!-- Services -->
@@ -451,54 +451,9 @@ a.white, a.white:visited {
 	<!-- Footer -->
 	<footer>
 		<div class="container">
-			<div class='row'>
-				<div class="col-md-6 col-md-offset-3 text-center">
-					<div class='btn-group'>
-						<button class="btn btn-default btn-lg disabled">Share:</button>
-						<a
-							class="btn btn-default btn-lg"
-							target="_blank"
-							title="On Facebook"
-							href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fgv-neumann.de&amp;t=Gerichtsvollzieher%20Neumann%20in%20Jena"
-						> <i class="fa fa-facebook fa-lg fb"></i>
-						</a> <a
-							class="btn btn-default btn-lg"
-							target="_blank"
-							title="On Twitter"
-							href="http://twitter.com/share?url=http%3A%2F%2Fgv-neumann.de&amp;text=Gerichtsvollzieher%20Neumann%20in%20Jena"
-						> <i class="fa fa-twitter fa-lg tw"></i>
-						</a> <a
-							class="btn btn-default btn-lg"
-							target="_blank"
-							title="On Google Plus"
-							href="https://plusone.google.com/_/+1/confirm?hl=en&amp;url=http%3A%2F%2Fgv-neumann.de"
-						> <i class="fa fa-google-plus fa-lg google"></i>
-						</a> <a
-							class="btn btn-default btn-lg"
-							target="_blank"
-							title="On LinkedIn"
-							href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http%3A%2F%2Fgv-neumann.de"
-						> <i class="fa fa-linkedin fa-lg linkin"></i>
-						</a> <a
-							class="btn btn-default btn-lg"
-							target="_blank"
-							title="On xing"
-							href="https://www.xing.com/app/user?op=share;url=gv-neumann.de;title=Gerichtsvollzieher%20Neumann%20in%20Jena"
-						> <i class="fa fa-xing fa-lg xing"></i>
-						</a> <a
-							class="btn btn-default btn-lg"
-							target="_blank"
-							title="Pin It"
-							href="http://www.pinterest.com/pin/create/button/?url=http%3A%2F%2Fgv-neumann.de&amp;media=http%3A%2F%2Fgv-neumann.de/icon-256.png&amp;description=Gerichtsvollzieher%20Neumann%20in%20Jena&amp;"
-						> <i class="fa fa-pinterest fa-lg pinterest"></i>
-						</a>
-					</div>
-				</div>
-			</div>
-			<hr />
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center">
-					<p>Copyright &copy; Andreas Neumann, 2014</p>
+					<p>Copyright &copy; Andreas Neumann, 2018</p>
 				</div>
 			</div>
 		</div>
