+Zwangsversteigerung und Tileserver umgeschwenkt

--- a/index.html
+++ b/index.html
@@ -373,12 +373,12 @@ a.white, a.white:visited {
 				>Sprechzeiten</a>
 			</div>
 		</div>
-		<!--<div class="vert-text">
+		<div class="vert-text">
 			<div>
 				<h2>Zwangs&shy;versteigerung</h2>
 				<p>von R&auml;umungsgut</p>
 				<p>
-					am Freitag den <strong>20. April</strong> 2018 um <strong>10<sup><u>00</u></sup>
+					am Freitag den <strong>02. November</strong> 2018 um <strong>10<sup><u>00</u></sup>
 						Uhr
 					</strong>
 				</p>
@@ -387,13 +387,12 @@ a.white, a.white:visited {
 						href="http://map4jena.de/?flag=adress&amp;street=Spitzweidenweg&amp;number=28a&amp;name=M%C3%B6bel-+und+G%C3%BCterspedition+Coriand+GmbH"
 					>Spitzweidenweg 28a; 07743 Jena</a>)
 				</p>
-				<p>Möbel nach Zwangsräumung (Einbauküche mit Elektroherdplatte,
+				<p>Möbel nach Zwangsräumung (Einbauküche mit Gasherd,
 					Spüle, kleinem externen Backofen, Mikrowelle, Abzugshaube sowie
-					Kleiderschrank, Bett, diverse Kleinmöbel, Waschmaschine (Bauknecht,
-					Toplader)) im Paket zu versteigern.</p>
-				<p>Mindestgebot 300,00 €</p>
+					Kleiderschrank, Bett, diverse Kleinmöbel) im Paket zu versteigern.</p>
+				<p>Mindestgebot 200,00 €</p>
 			</div>
-		</div>-->
+		</div>
 	</div>
 	<!-- /Full Page Image Header Area -->
 	<!-- Services -->
@@ -538,7 +537,7 @@ a.white, a.white:visited {
 									[ 50.9234, 11.5938 ], 14);
 							L
 									.tileLayer(
-											"https://{s}.tile.openstreetmap.de/tiles/osmde/{z}/{x}/{y}.png",
+											"https://{s}.tile.stadtplan-ilmenau.de/tile/{z}/{x}/{y}.png",
 											{
 												attribution : "Daten: OSM.org (<a class='extern' href='https://opendatacommons.org/licenses/odbl/'>ODbL</a>) | Darstellung: <a class='extern' href='http://openstreetmap.de/'>OpenStreetMap.DE</a>",
 												maxZoom : 18
