--- a/index.html
+++ b/index.html
@@ -378,19 +378,27 @@ a.white, a.white:visited {
 				<h2>Zwangs&shy;versteigerung</h2>
 				<p>von R&auml;umungsgut</p>
 				<p>
-					am Freitag den <strong>02. November</strong> 2018 um <strong>10<sup><u>00</u></sup>
-						Uhr
-					</strong>
+					am Freitag den <strong>02.&nbsp;November</strong>&nbsp;2018 um <strong>14<sup><u>30</u></sup>&nbsp;Uhr</strong>
 				</p>
 				<p>
 					in der Spedition Coriand GmbH<br />(<a
 						href="http://map4jena.de/?flag=adress&amp;street=Spitzweidenweg&amp;number=28a&amp;name=M%C3%B6bel-+und+G%C3%BCterspedition+Coriand+GmbH"
 					>Spitzweidenweg 28a; 07743 Jena</a>)
 				</p>
-				<p>Möbel nach Zwangsräumung (Einbauküche mit Gasherd,
-					Spüle, kleinem externen Backofen, Mikrowelle, Abzugshaube sowie
-					Kleiderschrank, Bett, diverse Kleinmöbel) im Paket zu versteigern.</p>
-				<p>Mindestgebot 200,00 €</p>
+				<p>
+					Möbel nach Zwangsräumung im Paket zu versteigern:<br/>
+					Küche mit Gasherd, Backofen, Spüle, Kühl-Gefrierkombination (Einbauschrank), Unterschränke gesamt ca. 3,50m, 3 Hängeschränke mit Klapptür nach oben (rot / satiniertes Glas), verschiedene Möbel wie Sofa, Schrank 2-türig, Tisch, 2 Barhocker (rot und schwarz)
+ 				</p>
+				<p>
+					<a href='/img/2018-11-02-01.jpg'><img class='img-thumbnail' src='/img/2018-11-02-01.jpg' /></a> <a href='/img/2018-11-02-02.jpg'><img class='img-thumbnail' src='/img/2018-11-02-02.jpg' /></a>
+				</p>
+				<p>
+					Die Sachen sind benutzt und weisen Gebrauchsspuren auf. Eine Funktionsprüfung hat nicht statt gefunden.
+					Der Zuschlag erfolgt nach dreimaligem Aufgebot. Die Bezahlung hat bar vor Ort zu erfolgen.
+				</p>
+				<p>
+					Mindestgebot 250,00 €. Nachfragen unter meiner Telefonnummer.
+  			</p>
 			</div>
 		</div>
 	</div>
