--- a/impressum.html
+++ b/impressum.html
@@ -4,6 +4,7 @@
 <head>
     <title>GV-Neumann.de - Impressum</title>
     <meta name="robots" content="noindex">
+    <meta charset='utf-8' />
 </head>
 
 <body>
